- show printing speed beneath layer height in ecmp-menu
- g_maxZCompensationSteps got one more space in display
- limit start line speed decrease to minimum 10% (-90%) instead of 5%
- removed ALLOW_QUADSTEPPING from RFx000.h because it is just there to be used.

V RF.01.38.24.Mod (2018-02-01) 
- GCODE-Pause: automatically wait for queue position of "pause" and block further Gcodes until continue was pressed.
- Tweaking setOrigin (Origin of gcode coordinates / G92 XYZ) so that it can origin axes that are homed without the need of having everything homed.
- removed M3071 because it doesnt seem to be needed anymore. (-> integrated into M3070)

V RF.01.38.23.Mod (2018-01-31) 
- Strange behaviour of ZOS Scan: Debugging and one idea for a fix: Limit going up to retry if digits drive away on cold printers with filament warming up.
(2018-02-05: at least until now we did not see the bug anymore, means that we still dont know if we fixed the bug with 01.38.23 but it looks good.)

V RF.01.38.22.Mod (2018-01-29) 
- Extruder pause delay changed from 30 to 60 s
- some cleanup 
- some security measures for M3912 and tweaks for M3001 Gcode (removed M400)

V RF.01.38.21.Mod (2018-01-28) 
- New M3912 to automatically draw a start line to clean nozzle within start code.
  Example: M3912 I2 E20 F18
  I2 -> 2 Lines
  E20 -> Extrusion width value
  F18 -> 18mm/s
  The nice feature is that high digits slow down the speed automatically. This startline adopts to your type of filaments/nozzle.
- DMS-Features: Digit-Flow-CMP -> dFeed now has an instant effect on your printers speed. The problem that the speed was set with the path cache is now gone.
- Enabling SenseOffset now happens in move cache queue (, not instantly as it was). Thatwhy we can drop some M400 in our startcodes.

V RF.01.38.20.Mod (2018-01-27) (Alpha!)
- Test: Better Z-Naht? (due to changed slow speed constraint at E<->YXZAxis transitions and E-direction transitions)