@@ -272,11 +272,13 @@ public:
     {
         return ((debugLevel & 16)!=0);
     } // debugCommunication
-
+    
+#ifdef INCLUDE_DEBUG_NO_MOVE
     static INLINE bool debugNoMoves()
     {
         return ((debugLevel & 32)!=0);
     }// debugNoMoves
+#endif // INCLUDE_DEBUG_NO_MOVE
 
     /** \brief Disable stepper motor for x direction. */
     static INLINE void disableXStepper()
