@@ -560,11 +560,6 @@ public:
             return;
         }
 
-        //eigentlich gibts den fall hier nicht anders, wenn keiner umbaut, trotzdem!
-        if(!isNoMove()) //x+y+z+e heißt bits 240 .... 1111 0000 -> isXYZ ist 112  und isE ist 128, kommt aufs selbe raus.
-        {
-            Printer::unmarkAllSteppersDisabled();
-        }
         // Only enable axis that are moving. If the axis doesn't need to move then it can stay disabled depending on configuration.
         if(isXMove())
         {
@@ -583,6 +578,7 @@ public:
         }
         if(isEMove())
         {
+            Printer::unmarkAllSteppersDisabled(); //doesnt fit into Extruder::enable() because of forward declare -> TODO
             Extruder::enable();
 #if USE_ADVANCE
             if(!Printer::isAdvanceActivated()) // Set direction if no advance/OPS enabled
